@@ -196,6 +196,18 @@ module Rucola
         `cp -R #{path} #{RUBYCOCOA_ROOT}/#{File.basename(path)}` if File.directory?(path)
       end
     end
+    
+    # Now is a good time to load the plugins, because
+    # this will give them the chance to alter the
+    # behaviour of Rucola before it starts.
+    RUBYCOCOA_PLUGINS_ROOT = RUBYCOCOA_ROOT + 'vendor/plugins'
+    @@required_plugins = [] # TODO: isn't used yet
+    if RUBYCOCOA_PLUGINS_ROOT.exist?
+      RUBYCOCOA_PLUGINS_ROOT.children.each do |plugin|
+        @@required_plugins.push plugin
+        require plugin + 'init.rb'
+      end
+    end
   end
   
   class Configuration
